# nvim-github-codesearch

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  flake.nix
lua/: nvim-github-codesearch.lua
src/: lib.rs  query.rs
